--- a/TaskManager/appsettings.json
+++ b/TaskManager/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AppDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=TaskManager;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "AppDbContextConnection": "Server=KRZYSZTOF;Database=TaskManager;Trusted_Connection=True"
   }
 }
